# aegis-wallet

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tasklist.md  vercel.json
app/: next.config.ts  package.json  tsconfig.json
demo-dapp/: README.md  app.ts  build.mjs  index.html
docs/: local-nitro-vault-agent-guide.md  overflow-demo-script.md  overflow-pitch.md  overflow-submission.md
enclave/: Cargo.toml  DEPLOY.md  Dockerfile  Makefile  attestation.json  bootstrap-nitro-host.sh  run.sh  setup-network-proxy.sh
enclave/src/: cosign.rs  ledger.rs  lib.rs  main.rs  policy.rs  policy_source.rs  simulation.rs  sui_signature.rs
extension/: README.md  package.json  tsconfig.json
mobile/: package.json
risk-service/: package.json  tsconfig.json
scripts/: build-extension.ts  build-mobile.ts  decode-attestation.py  enclave-cosign-smoke.ts  extension-background-smoke.ts  extension-content-smoke.ts  extension-popup-smoke.ts  external-gates-preflight.ts  localnet-stake-execute.ts  mainnet-swap-quote.ts  mobile-bundle-smoke.ts  register-nautilus-enclave.ts  testnet-activity-probe.ts  testnet-passkey-execute.ts  testnet-policy-receipts.ts  testnet-portfolio-probe.ts  testnet-portfolio-value-probe.ts  testnet-readonly-probe.ts  testnet-seal-recovery.ts  testnet-seal-vault-recovery.ts  testnet-send-execute.ts  testnet-simulate-probe.ts  testnet-stake-execute.ts  testnet-staking-overview-probe.ts  testnet-token-metadata-probe.ts  testnet-vault-execute.ts  testnet-vault-recovery-execute.ts  wallet-send-smoke.ts  (+1 more)
(+123 files in other folders)
